more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.10
--------------

 * many, many small bug fixes and improvements
 * support for nine-valued VHDL logic
 * support for user libraries created from subcircuits
 * import of Touchstone, CITI and VCD data files
 * export data to CSV files
 * creation of project package file for data exchange

Version 0.0.9
-------------

 * components can be either deactivated as short or open
 * VHDL files can be used as subcircuits
 * VHDL text editor
 * translation into Russian
 * number of ports of S-parameter component not anymore limited
 * language can be chosen in application settings dialog
 * new components: coaxial line, differential voltage probe, switch, AM-
   and PM-modulator, relais
 * fixed bug in Cauer band-stop filter

Version 0.0.8
-------------

 * digital simulation using FreeHDL is finally working
 * translation into Turkish
 * new diagrams: truth table and timing diagram
 * add non-Qucs files to project
 * dialog for changing properties of several components
 * creating matching circuits
 * more filters supported by filter synthesis tool
 * many more models in component library
 * new components: digital gates, correlated noise sources,
   mutual inductors
 * printing DC bias into schematic
 * hide invisible lines in 3D diagram

Version 0.0.7
-------------

 * text painting rotations in subcircuit symbols
 * renamed Qucs, new name is "Quite Universal Circuit Simulator"
 * several small improvements and bug fixes
 * Latex-like mnemonics (e.g. \tau) in graphic texts and diagram labels
 * library manager including transistor, diode, substrate, etc. libraries

Version 0.0.6
-------------

 * finished SPICE component
 * transmission line calculator
 * filter synthesis application
 * new diagrams: 3-dimensional cartesian, locus curve
 * many small improvements
 * edit component properties directly on the schematic
 * translations into Swedish